--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
+        "start": "npm run dev",
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
     "dependencies": {
+        "@codecompanybrasil/discipline-core": "^1.0.15",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0"
